force-app/main/default/objects/Development_tracker__c/Development_tracker__c.object-meta.xml
<CustomObject>
    <label>Development tracker</label>
    <nameField>
        <displayFormat>DT-{0000}</displayFormat>
        <label>Ticket number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Developments tracker</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>