force-app/main/default/objects/Development_tracker__c/fields/Closed_Year__c.field-meta.xml
<CustomField>
    <fullName>Closed_Year__c</fullName>
    <label>Closed Year</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2023</fullName>
            </value>
            <value>
                <fullName>2024</fullName>
            </value>
            <value>
                <fullName>2025</fullName>
            </value>
            <value>
                <fullName>2026</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>