force-app/main/default/objects/Development_tracker__c/fields/Developer_name__c.field-meta.xml
<CustomField>
    <fullName>Developer_name__c</fullName>
    <label>Developer name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Amar</fullName>
            </value>
            <value>
                <fullName>Prashant</fullName>
            </value>
            <value>
                <fullName>Sheetal</fullName>
            </value>
            <value>
                <fullName>Vinay</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>