force-app/main/default/objects/Development_tracker__c/fields/Developer_Response__c.field-meta.xml
<CustomField>
    <fullName>Developer_Response__c</fullName>
    <label>Developer Response</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>