force-app/main/default/objects/Development_tracker__c/fields/Requested_by__c.field-meta.xml
<CustomField>
    <fullName>Requested_by__c</fullName>
    <label>Requested by</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sheetal</fullName>
            </value>
            <value>
                <fullName>Vinay</fullName>
            </value>
            <value>
                <fullName>Vishal</fullName>
            </value>
            <value>
                <fullName>Birendra</fullName>
            </value>
            <value>
                <fullName>Ameya</fullName>
            </value>
            <value>
                <fullName>Praveen</fullName>
            </value>
            <value>
                <fullName>Prashant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>