force-app/main/default/objects/Development_tracker__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Deployed &amp; Resolved</fullName>
            </value>
            <value>
                <fullName>Developed</fullName>
            </value>
            <value>
                <fullName>In process</fullName>
            </value>
            <value>
                <fullName>Not initiated</fullName>
                <default>true</default>
                <label>Not initiated</label>
            </value>
            <value>
                <fullName>Query</fullName>
            </value>
            <value>
                <fullName>UAT failed</fullName>
            </value>
            <value>
                <fullName>Under UAT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>