force-app/main/default/objects/Development_tracker__c/fields/Ticket_Description__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Description__c</fullName>
    <label>Ticket Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>