force-app/main/default/objects/Development_tracker__c/fields/Ticket_name__c.field-meta.xml
<CustomField>
    <fullName>Ticket_name__c</fullName>
    <label>Ticket name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>