force-app/main/default/objects/Development_tracker__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Developer_name__c</columns>
    <columns>Priority__c</columns>
    <columns>Status__c</columns>
    <columns>Ticket_name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>